--- a/style.css
+++ b/style.css
@@ -2,10 +2,22 @@ body {
     background: #CCCCCC
 }
 
-p, h1 {
+#banner{
+    width: 100%;
+}
+
+h1, p {
     text-align: center;
+}
+
+#missao{
+    font-size: 20px;
 }
 
 em strong {
     color: #FF0000;
+}
+
+.itens{
+    font-style: italic;
 }
